# murrayc-tuple-utils

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  NEWS  README.md  README_build  README_build.md  cmake_install.cmake  configure.ac  murrayc-tuple-utils.pc.in
.github/workflows/: autotools-clang-5.yml  autotools-clang-6.yml  autotools-clang-7.yml  autotools-clang-8.yml  autotools-gcc-7.yml  autotools-gcc-8.yml  autotools-gcc-9.yml  cmake.yml
cmake/: murrayc-tuple-utils-1Config.cmake.in
docs/: Makefile.am
docs/reference/: Doxyfile.in
tests/: CMakeLists.txt  test_tuple_cat.cc  test_tuple_cdr.cc  test_tuple_end.cc  test_tuple_for_each.cc  test_tuple_interlace.cc  test_tuple_print.cc  test_tuple_start.cc  test_tuple_subset.cc  test_tuple_transform_each.cc
tuple-utils/: CMakeLists.txt  filelist.am  tuple_cat.h  tuple_cdr.h  tuple_end.h  tuple_for_each.h  tuple_for_each_const.h  tuple_interlace.h  tuple_print.h  tuple_start.h  tuple_subset.h  tuple_transform_each.h  tuple_transform_each_const.h
